modules/noosphere/taghmata/nixidy/manifests/prod/prowlarr/Service-prowlarr.yaml
apiVersion: v1
kind: Service
metadata:
  name: prowlarr
  namespace: yarr
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 9696
  selector:
    app: prowlarr
  type: ClusterIP
