modules/noosphere/taghmata/nixidy/manifests/prod/prowlarr/Ingress-prowlarr-ip-root.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    argocd.argoproj.io/sync-options: Prune=false,Delete=false
    category: yarr
    cert-manager.io/cluster-issuer: letsencrypt-cloudflare
    glance/description: Indexer Management
    glance/icon: di:prowlarr
    glance/id: prowlarr
    glance/name: Prowlarr
    glance/parent: prowlarr
    glance/url: https://prowlarr.noosphere.uk
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
  name: prowlarr-ip-root
  namespace: yarr
spec:
  ingressClassName: traefik
  rules:
    - host: prowlarr.noosphere.uk
      http:
        paths:
          - backend:
              service:
                name: prowlarr
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - prowlarr.noosphere.uk
      secretName: prowlarr-tls
